# sso-oidc

./: .env.dev  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.sqlx-cli  Makefile  README.md  db-scheme.md  docker-compose-pg.yaml  docker-compose.dev.yaml  docker-compose.yaml  package-lock.json  test_local_setup.sh  test_make.sh
.sqlx/: query-0e2568579dfb5affc9e4ba4bc401fd4eafd9d6ea9b1b6126f534509a90df1713.json  query-2958836cd81240a13e7155c69284294259a19b4da567dc3e860930f96d276dd7.json  query-3ceac804aad2b358592bfb2ac933aa97275199c844c647c9dab40c27664153e2.json  query-5c0d4aec203bad704716ac81b96ca03998f21a3da4164a4b4da15f76b398191a.json  query-7c202c03e81975d25a888a99bd0e9df6c6b3d3cf8678e802233a63b18829db98.json  query-b6bbfa6e813a33f509dacfa5cbc57b4f35f758ab87e2b0ca443ab338ab8b85c1.json  query-d9ee223f51a9152a259e19bb02fea51dcea524f1b5bf5ea7b863aafcc27ce42e.json  query-e8f1407ded20f2f9244d45170843e87685b77b75244d554a9e15f52efc43013d.json
config/: applications.yaml  tenants.yaml  users.yaml
docs/: openapi.yaml
example/launchpad/: .env.example  next.config.mjs  package-lock.json  package.json
example/snake-app-new/: .env.example  .gitlab-ci.yml  Dockerfile  TODO.md  docker-compose.yml  next.config.mjs  package.json
example/sso-oidc-client-dashboard-example/: tsconfig.app.json  vite.config.ts
example/sso-oidc-client-dashboard-example-test/: README.md  package-lock.json  package.json  tsconfig.json
example/todo-app/: Makefile  README.md  docker-compose.yaml
examples/sso-oidc-client-dashboard-example/: package.json  vite.config.ts
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
migrations/: 20250707133420_initial_schema.sql
src/: main.rs
src/handlers/: authorization_code_handler.rs  jwk_set_handler.rs  login_handler.rs  logout_handler.rs  mod.rs  oidc_discovery_handler.rs  token_handler.rs  user_handler.rs
src/models/: application_model.rs  auth_code_data.rs  authorize_request.rs  claims.rs  login.rs  mod.rs  oidc_discovery_document.rs  services_config.rs  session.rs  token_request.rs  token_response.rs  user_models.rs
src/routes/: auth.rs  authorize_routes.rs  logout_routes.rs  mod.rs  routes.rs  token_routes.rs  user_routes.rs
src/services/: application_service.rs  authorize_code_service.rs  mod.rs  session_service.rs  user_service.rs
(+153 files in other folders)
