[package]
name = "sso-oidc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenv = "0.15.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.140"
serde_with = { version = "3.14.0", features = ["json"]}
uuid = { version = "1.17.0", features = ["serde", "v4"] }
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
rand = "0.8.5"
base64 = "0.22.1"

[dev-dependencies]
rsa = "0.7.2"
rand = "0.8.5"
lazy_static = "1.5.0"

