[package]
name = "sso-oidc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenv = "0.15.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.46.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.140"
serde_with = { version = "3.14.0", features = ["json"]}
uuid = { version = "1.17.0", features = ["serde", "v4"] }
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
rand = "0.8.5"
redis = { version = "0.32.3", features = ["json", "tokio-comp"] }
bb8-redis = "0.24.0"
bb8 = "0.9.0"
anyhow = "1.0.98"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
serde_urlencoded = "0.7.1"
urlencoding = "2.1.3"
tower-http = { version = "0.6.6", features = ["cors"] }
http = "1.3.1"
axum-server = "0.7.2"
cookie = "0.18.1"
axum-macros = "0.5.0"
rsa = "0.7.2"
openssl = "0.10.73"
base64 = "0.22.1"
thiserror = "2.0.12"

[dev-dependencies]
rsa = "0.7.2"
rand = "0.8.5"
lazy_static = "1.5.0"
